--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "@mui/icons-material": "^5.16.0",
     "@mui/material": "^5.16.0",
     "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^14.1.2",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.101",
@@ -17,17 +16,19 @@
     "@types/react-dom": "^18.3.0",
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.34",
-    "dotenv": "^16.4.5",
+    "crypto-browserify": "^3.12.0",
     "graphql": "^16.9.0",
     "leaflet": "^1.9.4",
     "leaflet.markercluster": "^1.5.3",
+    "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
     "punycode": "^2.3.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-leaflet": "^4.2.1",
     "react-leaflet-markercluster": "^3.0.0-rc1",
     "react-router-dom": "^6.24.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "styled-components": "^6.1.11",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
@@ -57,6 +58,7 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/react": "^16.0.0",
     "@types/leaflet": "^1.9.12",
     "@types/react-leaflet-markercluster": "^3.0.4",
     "eslint-config-prettier": "^9.1.0",
